--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.0-alpha1",
     "boxicons": "^2.1.4",
     "cookie-parser": "^1.4.6",
