--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "pg": "^8.10.0"
   }
 }
